index image added

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <p>Hello World! This is ITEC 3870</p>
+        <img src="BettyWhite1.jpg" alt="Betty" style="width:304px;height:228px;">
     </body>
 </html>
