added style and list to index

--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <title>Mike's Homepage</title>
+        <style>
+            body 
+            {
+                background-color:lightblue;
+            }
+        </style>
     </head>
+    
     <body>
         <p>Hello World! This is ITEC 3870</p>
         <img src="BettyWhite1.jpg" alt="Betty" style="width:304px;height:228px;">
+        <ul>
+            <li>Projects</li>
+            <li>Resume</li>
+            <li>About Me</li>
+        </ul>
+        <div class="container">
+            <h2>Bio</h2>
+            <p>My name is Mike and I go to GGC. My major is in Software Developement.</p>
+        </div>
     </body>
 </html>
