Added pages and css

--- a/index.html
+++ b/index.html
@@ -5,18 +5,30 @@
         <style>
             body 
             {
-                background-color:lightblue;
+                background-color:black;
+            }
+            ul li
+            {
+                display:inline;
+                margin-left:10px;
+                color:white;
+            }
+            .container
+            {
+                background-color:red;
+                margin-top:30px;
+                margin-bottom:30px;
+                margin-left:30px;
+                margin-right:30px;
             }
         </style>
     </head>
     
     <body>
-        <p>Hello World! This is ITEC 3870</p>
-        <img src="BettyWhite1.jpg" alt="Betty" style="width:304px;height:228px;">
         <ul>
-            <li>Projects</li>
-            <li>Resume</li>
-            <li>About Me</li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
         </ul>
         <div class="container">
             <h2>Bio</h2>
