--- a/index.html
+++ b/index.html
@@ -2,26 +2,7 @@
 <html>
     <head>
         <title>Mike's Homepage</title>
-        <style>
-            body 
-            {
-                background-color:black;
-            }
-            ul li
-            {
-                display:inline;
-                margin-left:10px;
-                color:white;
-            }
-            .container
-            {
-                background-color:red;
-                margin-top:30px;
-                margin-bottom:30px;
-                margin-left:30px;
-                margin-right:30px;
-            }
-        </style>
+        <link rel="stylesheet" href="css/style.css" type="text/css"/>
     </head>
     
     <body>
@@ -30,8 +11,9 @@
             <li><a href="resume.html">Resume</a></li>
             <li><a href="aboutme.html">About Me</a></li>
         </ul>
-        <div class="container">
+        <div class="container_1">
             <h2>Bio</h2>
+            <img src="BettyWhite1.jpg"/>
             <p>My name is Mike and I go to GGC. My major is in Software Developement.</p>
         </div>
     </body>
