changes to pages

--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Projects</title>
+        <title>Mike's Homepage</title>
+        <link rel="stylesheet" href="css/style.css" type="text/css"/>
     </head>
+    
     <body>
-        <a href="index.html">Home</a>
+        <div class="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="aboutme.html">About Me</a></li>
+            </ul>
+        </div>
+        <div class="container_1">
+            <h2>Projects</h2>
+            <hr/>
+            <img src=""/>
+            <p>This is where my projects are.</p>
+        </div>
     </body>
 </html>
