--- a/aboutme.html
+++ b/aboutme.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About Me</title>
+        <title>Mike's Homepage</title>
+        <link rel="stylesheet" href="css/style.css" type="text/css"/>
     </head>
+    
     <body>
-        <a href="index.html">Home</a>
-        <ul>
-            <li>Testing</li>
-        </ul>
+        <div class="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="aboutme.html">About Me</a></li>
+            </ul>
+        </div>
+        <div class="container_1">
+            <h2>About Me</h2>
+            <hr/>
+            <img src=""/>
+            <p>My name is Mike and I go to GGC. My major is in Software Developement.</p>
+        </div>
     </body>
 </html>
