--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     </head>
     
     <body>
-        <ul>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="aboutme.html">About Me</a></li>
-        </ul>
+        <div class="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="aboutme.html">About Me</a></li>
+            </ul>
+        </div>
         <div class="container_1">
             <h2>Bio</h2>
-            <img src="BettyWhite1.jpg"/>
+            <hr/>
+            <img src=""/>
             <p>My name is Mike and I go to GGC. My major is in Software Developement.</p>
         </div>
     </body>
