--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Resume</title>
+        <title>Mike's Homepage</title>
+        <link rel="stylesheet" href="css/style.css" type="text/css"/>
     </head>
+    
     <body>
-        <a href="index.html">Home</a>
+        <div class="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="aboutme.html">About Me</a></li>
+            </ul>
+        </div>
+        <div class="container_1">
+            <h1>Michael Schmitt</h1>
+            <hr/>
+            <h3>Objective</h3>
+            <hr/>
+            <h3>Education</h3>
+            <hr/>
+            <h3>Experience</h3>
+            <hr/>
+            <h3>Skills</h3>
+            <hr/>
+            <h3>Statement</h3>
+            <hr/>
+        </div>
     </body>
 </html>
