--- a/projects.html
+++ b/projects.html
@@ -6,13 +6,15 @@
     </head>
     
     <body>
-        <div class="nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="aboutme.html">About Me</a></li>
-            </ul>
+        <div class="head">
+            <div class="nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                </ul>
+            </div>
         </div>
         <div class="container_1">
             <h2>Projects</h2>
