--- a/resume.html
+++ b/resume.html
@@ -6,27 +6,55 @@
     </head>
     
     <body>
-        <div class="nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="aboutme.html">About Me</a></li>
-            </ul>
+        <div class="head">
+            <div class="nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                </ul>
+            </div>
         </div>
         <div class="container_1">
+            <div class="picture_box"><img src="profile.jpg" height=150 width=150/></div>
             <h1>Michael Schmitt</h1>
             <hr/>
             <h3>Objective</h3>
             <hr/>
+            <ul>
+                <li>Objective 1</li>
+                <li>Objective 2</li>
+                <li>Objective 3</li>
+            </ul>
             <h3>Education</h3>
             <hr/>
+            <ul>
+                <li>Education 1</li>
+                <li>Education 2</li>
+                <li>Education 3</li>
+            </ul>
             <h3>Experience</h3>
             <hr/>
+            <ul>
+                <li>Experience 1</li>
+                <li>Experience 2</li>
+                <li>Experience 3</li>
+            </ul>
             <h3>Skills</h3>
             <hr/>
+            <ul>
+                <li>Skill 1</li>
+                <li>Skill 2</li>
+                <li>Skill 3</li>
+            </ul>
             <h3>Statement</h3>
             <hr/>
+            <ul>
+                <li>Statement 1</li>
+                <li>Statement 2</li>
+                <li>Statement 3</li>
+            </ul>
         </div>
     </body>
 </html>
