--- a/projects.html
+++ b/projects.html
@@ -7,14 +7,12 @@
     
     <body>
         <div class="head">
-            <div class="nav">
-                <ul>
-                    <li><div class="head_button"><a href="index.html">Home</a></div></li>
-                    <li><div class="head_button"><a href="projects.html">Projects</a></div></li>
-                    <li><div class="head_button"><a href="resume.html">Resume</a></div></li>
-                    <li><div class="head_button"><a href="aboutme.html">About Me</a></div></li>
-                </ul>
-            </div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="aboutme.html">About Me</a></li>
+            </ul>
         </div>
         <div class="container_1">
             <h2>Projects</h2>
