--- a/resume.html
+++ b/resume.html
@@ -7,17 +7,15 @@
     
     <body>
         <div class="head">
-            <div class="nav">
-                <ul>
-                    <li><div class="head_button"><a href="index.html">Home</a></div></li>
-                    <li><div class="head_button"><a href="projects.html">Projects</a></div></li>
-                    <li><div class="head_button"><a href="resume.html">Resume</a></div></li>
-                    <li><div class="head_button"><a href="aboutme.html">About Me</a></div></li>
-                </ul>
-            </div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="aboutme.html">About Me</a></li>
+            </ul>
         </div>
         <div class="container_1">
-            <div class="picture_box"><img src="profile.jpg" height=200 width=200/></div>
+            <img src="profile.jpg" height=200 width=200/>
             <h1>Michael Schmitt</h1>
             <hr/>
             <h3>Objective</h3>
