Added a picture to projects

--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
         <div class="container_1">
             <h2>Projects</h2>
             <hr/>
-            <img src=""/>
+            <img src="break.jpg" height=50% width=50%/>
             <p>This is where my projects are.</p>
         </div>
     </body>
