--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,11 @@
         <div class="container_1">
             <h2>Projects</h2>
             <hr/>
-            <img src="break.jpg" height=50% width=50%/>
+            <a href="projects/exproject.html"><h3>Hand Phone</h3></a>
+            <a href="projects/exproject.html"><img src="images/break.jpg" height=50% width=50%/></a>
+            
+            <a href="projects/gsauto.html"><h3>GS Automated</h3></a>
+            <a href="projects/gsauto.html"><img src="images/gsinterface.jpg" height=50% width=50%/></a>
             <p>This is where my projects are.</p>
         </div>
     </body>
