--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
             </ul>
         </div>
         <div class="container_1">
-            <img src="profile.jpg" height=200 width=200/>
+            <img src="images/profile.jpg" height=200 width=200/>
             <h1>Michael Schmitt</h1>
             <hr/>
             <h3>Objective</h3>
