Titles and gs corrected

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mike's Homepage</title>
+        <title>Mike's Projects</title>
         <link rel="stylesheet" href="css/style.css" type="text/css"/>
     </head>
     
