--- a/projects/gsauto.html
+++ b/projects/gsauto.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mike's Homepage</title>
+        <title>GS Automated</title>
         <link rel="stylesheet" href="../css/style.css" type="text/css"/>
     </head>
     
@@ -15,7 +15,7 @@
             </ul>
         </div>
         <div class="container_1">
-            <h2>Example Hand Phone Project</h2>
+            <h2>GS Automated</h2>
             <hr/>
             <img src="../images/gsinterface.jpg" height=50% width=50%/>
             <img src="../images/gsexport.jpg" height=50% width=50%/>
