--- a/torino.html
+++ b/torino.html
@@ -15,12 +15,14 @@
             </ul>
         </div>
         <div class="container_1">
-            <h2>About Me</h2>
+            <h2>Gran Torino</h2>
             <hr/>
             <img src=""/>
-            <p>My name is Mike and I go to GGC. My major is in Software Developement.</p>
-            <p>One of my interests would be my car.</p>
-            <a href="torino.html"><img src="images/torino4.jpg" height="300px" width="300px"/></a>
+            <h2>This is a 1969 Gran Torino GT. I am in the process of restoring it.</h2>
+            <p><img src="images/torino1.jpg" height="300px"/></p>
+            <p><img src="images/torino2.jpg" height="300px"/></p>
+            <p><img src="images/torino3.jpg" height="300px"/></p>
+            <p><img src="images/torino4.jpg" height="300px"/></p>
         </div>
     </body>
 </html>
