--- a/aboutme.html
+++ b/aboutme.html
@@ -18,9 +18,22 @@
             <h2>About Me</h2>
             <hr/>
             <img src=""/>
-            <p>My name is Mike and I go to GGC. My major is in Software Developement.</p>
-            <p>One of my interests would be my car.</p>
-            <a href="torino.html"><img src="images/torino4.jpg" height="300px" width="300px"/></a>
+            <p>My name is Mike and I go to GGC in Lawrenceville GA. My major is in Software Developement.</p>
+            <p>A short list of my insterests would be cars, computers, software, and outdoor activities.</p>
+            <a href="projects/torino.html"><img src="images/widetorino.JPG" height=150px/></a>
+            <p>My car is a great example of my interest in the way things work. I have had no prior experience</p>
+            <p>with cars before my first problems with my car. After the initial problems were fixed I was hooked</p>
+            <p>on the process of learning the unknown.</p>
+            <a href="resume.html"><img src="images/profile.jpg" height=150px/></a>
+            <p>Over the course of my early adulthood my interest in outdoor activies has taught me about</p>
+            <p>finishing what I start. Pictured above was me at the Warrior Dash in GA that was an outdoor</p>
+            <p>obstacle course that I participated in. My goal to finish that event translate over to most</p>
+            <p>challenges that I take on in everyday life. This drive is what allows me to take big leaps</p>
+            <p>in my knowledge of software as well as my car as I explained above.</p>
+            <a href="projects/gsauto.html"><img src="images/gsinterface.jpg" height=150px/></a>
+            <p>The first real world chance I got to put my lessons into practice would be with "GS Automated</p>
+            <p>This is where I took my knowledge of software and put it to use for the first time in a </p>
+            <p>professional setting. </p>
         </div>
     </body>
 </html>
