--- a/projects.html
+++ b/projects.html
@@ -17,12 +17,15 @@
         <div class="container_1">
             <h2>Projects</h2>
             <hr/>
-            <a href="projects/exproject.html"><h3>Hand Phone</h3></a>
-            <a href="projects/exproject.html"><img src="images/break.jpg" height=50% width=50%/></a>
-            
+            <h4>Software</h4>
             <a href="projects/gsauto.html"><h3>GS Automated</h3></a>
             <a href="projects/gsauto.html"><img src="images/gsinterface.jpg" height=50% width=50%/></a>
-            <p>This is where my projects are.</p>
+            <p>GS Automated, a PC performance testing automation program.</p>
+            <hr/>
+            <h3>Hobbies</h3>
+            <a href="projcets/torino.html"><h4>Gran Torino</h4></a>
+            <a href="projects/torino.html"><img src="images/widetorino.JPG" height=200px /></a>
+            <p>I've had this 1969 Torino for a few years and it has been my free-time project.</p>
         </div>
     </body>
 </html>
