--- a/projects/gsauto.html
+++ b/projects/gsauto.html
@@ -17,9 +17,20 @@
         <div class="container_1">
             <h2>GS Automated</h2>
             <hr/>
+            <h3>Description</h3>
+            <p>This program is  a simple  GUI  that allows  a  reviews  team  for PC performance</p>
+            <p>testing  teams  to  automate  the  process  of  running individual  tests  rather </p>
+            <p>than run them manually. The program saves the users a few days of work by running</p>
+            <p>overnight and finishing  the next day. After the tests  complete  the information</p>
+            <p>is stored into an excel document with another tab of the program.</p>
+            <hr/>
             <img src="../images/gsinterface.jpg" height=50% width=50%/>
+            <p>Here is the master screen to configure the tests to be run as well as the</p>
+            <p>number of times the tests would be run. There is also a place to output</p>
+            <p>the resulting information</p>
+            <hr/>
             <img src="../images/gsexport.jpg" height=50% width=50%/>
-            <p>This is an automation software for hardware benchmarking.</p>
+            <p>This is the tab that allows the information to be exported to an excel doument.</p>
         </div>
     </body>
 </html>
