--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
             </ul>
         </div>
         <div class="container_1">
-            <h2>Bio</h2>
-            <hr/>
-            <img src=""/>
-            <p>My name is Mike and I go to GGC. My major is in Software Developement.</p>
+            <img src="images/sam.jpg" height=500px/>
         </div>
     </body>
 </html>
