--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
             <p>GS Automated, a PC performance testing automation program.</p>
             <hr/>
             <h3>Hobbies</h3>
-            <a href="projcets/torino.html"><h4>Gran Torino</h4></a>
+            <a href="projects/torino.html"><h4>Gran Torino</h4></a>
             <a href="projects/torino.html"><img src="images/widetorino.JPG" height=200px /></a>
             <p>I've had this 1969 Torino for a few years and it has been my free-time project.</p>
         </div>
