--- a/resume.html
+++ b/resume.html
@@ -21,37 +21,43 @@
             <h3>Objective</h3>
             <hr/>
             <ul>
-                <li>Objective 1</li>
-                <li>Objective 2</li>
-                <li>Objective 3</li>
+                <li>I hope to obtain a career in software developement, whether that be in application developement or game dev.</li>
+                <li>Amass a great amount of knowledge of many programming languages and concepts</li>
+                <li>Use this huge knowledge base that I amassed in the previous objective to create applications for use in all areas of life.</li>
             </ul>
             <h3>Education</h3>
             <hr/>
             <ul>
-                <li>Education 1</li>
-                <li>Education 2</li>
-                <li>Education 3</li>
+                <li>Georiga Gwinnett College - Software developement major - Fall 2012 - Current</li>
+                <li>High School Diploma</li>
             </ul>
             <h3>Experience</h3>
             <hr/>
             <ul>
-                <li>Experience 1</li>
-                <li>Experience 2</li>
-                <li>Experience 3</li>
+                <li>Internship over 2 summers for Alienware. My assignment was primarily <a href="projects/gsauto.html">GS Automated</a></li>
+                <li>Web developement for a small business that is no longer active. Including web site hosting, designing, and domain name purchasing.</li>
             </ul>
             <h3>Skills</h3>
             <hr/>
             <ul>
-                <li>Skill 1</li>
-                <li>Skill 2</li>
-                <li>Skill 3</li>
+                <li><img src="images/lang/java.jpg" height=100px width=100px/><img src="images/lang/csharp.jpeg" height=100px width=100px/><img src="images/lang/css.jpg" height=100px width=100px/>
+                <img src="images/lang/html.jpg" height=100px width=100px/></li>
+            </ul>
+            <h4>Knowledge of..</h4>
+            <ul>
+                <li><img src="images/lang/sql.jpg" height=100px width=100px/><img src="images/lang/cplus.jpeg" height=100px width=100px/></li>
             </ul>
             <h3>Statement</h3>
             <hr/>
             <ul>
-                <li>Statement 1</li>
-                <li>Statement 2</li>
-                <li>Statement 3</li>
+                <li>Since I was young I had an interest in computers. My first interaction with a computer I would play a single player game for hours on end. This experience gave me 
+                 a fun activity to do in my free time. When I entered into high school I was playing a game that introduced me to modding. After taking a look into the code that 
+                 the community had written to play the game I was hooked on the back end of video games. After playing around with the same game and modding it to play with my friends
+                 I enrolled in a web developement course offered by my school. This exposure to html and css led me to experiment with sql and php resulting in many simple web sites
+                 that resembled blogs and picture hosting sites. This course opened the door to my knowledge of multiple languages which led me to java. After learning enough java to 
+                 make some programs, and even games, I felt comfortable to learn another language. My first real world experience is the oportunity I had with Alienware's reviews department.
+                  By giving me the oportunity to fill a need that had been present I used my drive for knowledge to bring me to a functioning application that the department was to use for
+                  all their testing.</li>
             </ul>
         </div>
     </body>
