--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@
                  the community had written to play the game I was hooked on the back end of video games. After playing around with the same game and modding it to play with my friends
                  I enrolled in a web developement course offered by my school. This exposure to html and css led me to experiment with sql and php resulting in many simple web sites
                  that resembled blogs and picture hosting sites. This course opened the door to my knowledge of multiple languages which led me to java. After learning enough java to 
-                 make some programs, and even games, I felt comfortable to learn another language. My first real world experience is the oportunity I had with Alienware's reviews department.
+                 make some programs, and even games, I felt comfortable to learn another language. My first real world experience is the opportunity I had with Alienware's reviews department.
                   By giving me the oportunity to fill a need that had been present I used my drive for knowledge to bring me to a functioning application that the department was to use for
                   all their testing.</li>
             </ul>
